--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,13 +4,13 @@ volumes:
 services:
   db:
     image: postgres:13
-    restart: always
+#    restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
   web:
-    build: .
+    image: korsakovpv/yamdb_final:v1
     restart: always
     ports:
       - "8000:8000"
@@ -18,3 +18,14 @@ services:
       - db
     env_file:
       - ./.env
+  nginx:
+    image: nginx:1.19.3
+    container_name: web_nginx
+    volumes:
+      - ./nginx:/nginx/conf
+      - ./static:/static
+
+    ports:
+      - "80:80"
+    depends_on:
+      - web
