--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: afrlv/yamdb_final:v2
+          repository: korsakovpv/yamdb_final:v1
           tag_with_ref: true
 
   deploy:
@@ -53,9 +53,9 @@ jobs:
         key: ${{ secrets.DEPLOY_SERVER_KEY }}
         # passphrase: ${{ secrets.DEPLOY_SERVER_PASSPHRASE }} # если ваш ssh-ключ c паролем
         script: |
-          sudo docker pull afrlv/yamdb_final:v2
+          sudo docker pull korsakovpv/yamdb_final:v1
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 afrlv/yamdb_final:v2
+          sudo docker run --rm -d -p 5000:5000 korsakovpv/yamdb_final:v1
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
