--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -37,7 +37,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: afrlv/yamdb_final:v2
+          repository: korsakovpv/yamdb_final:v1
           tag_with_ref: true
 
   deploy:
