--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,20 +46,20 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: push_to_docker_hub
+    needs: build_and_push_to_docker_hub
     steps:
     - name: executing remote ssh commands to deploy
-      uses: appleboy/ssh-action@master
+      uses: appleboy/ssh-action@master #appleboy/ssh-action@main
       with:
-        host: ${{ secrets.DEPLOY_SERVER_HOST }}
-        port: ${{ secrets.DEPLOY_SERVER_PORT }}
-        username: ${{ secrets.DEPLOY_SERVER_USERNAME }}
-        key: ${{ secrets.DEPLOY_SERVER_KEY }}
-        # passphrase: ${{ secrets.DEPLOY_SERVER_PASSPHRASE }} # если ваш ssh-ключ c паролем
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        # passphrase: ${{ secrets.PASSPHRASE }} # если ваш ssh-ключ защищен фразой-паролем
         script: |
           sudo docker pull korsakovpv/yamdb_final:v1
           sudo docker stop $(sudo docker ps -a -q)
           sudo docker run --rm -d -p 5000:5000 korsakovpv/yamdb_final:v1
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
