--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -31,31 +31,35 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: korsakovpv/yamdb_final:v1
-          tag_with_ref: true
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: korsakovpv/yamdb_final:latest
 
   deploy:
     runs-on: ubuntu-latest
     needs: push_to_docker_hub
     steps:
     - name: executing remote ssh commands to deploy
-      uses: appleboy/ssh-action@master
+      uses: appleboy/ssh-action@master #appleboy/ssh-action@main
       with:
-        host: ${{ secrets.DEPLOY_SERVER_HOST }}
-        port: ${{ secrets.DEPLOY_SERVER_PORT }}
-        username: ${{ secrets.DEPLOY_SERVER_USERNAME }}
-        key: ${{ secrets.DEPLOY_SERVER_KEY }}
-        #passphrase: ${{ secrets.DEPLOY_SERVER_PASSPHRASE }} # если ваш ssh-ключ c паролем
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        # passphrase: ${{ secrets.PASSPHRASE }} # если ваш ssh-ключ защищен фразой-паролем
         script: |
           sudo docker pull korsakovpv/yamdb_final:v1
           sudo docker stop $(sudo docker ps -a -q)
           sudo docker run --rm -d -p 5000:5000 korsakovpv/yamdb_final:v1
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
