--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,11 @@ jobs:
     - name: Test with pytest
       run: pytest
 
-  rules:
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
-      when: never
-      push_to_docker_hub:
+  push_to_docker_hub:
+    script:
+    rules:
+      - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
+        when: never
         name: Push Docker image to Docker Hub
         runs-on: ubuntu-latest
         needs: tests
