--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           push: true
           tags: korsakovpv/yamdb_final:latest
     rules:
-      - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
+      - if: '$CI_COMMIT_BRANCH == "master"'
         when: always
 
   deploy:
