--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,6 @@ jobs:
         with:
           push: true
           tags: korsakovpv/yamdb_final:latest
-    rules:
-      - if: '$CI_COMMIT_BRANCH == "master"'
-        when: always
 
   deploy:
     runs-on: ubuntu-latest
@@ -71,4 +68,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно выполнен! В ветке
+        message: ${{ github.workflow }} успешно выполнен!
