--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-            cd yamdb
+            cd yamdb_final
             sudo docker-compose pull web
             sudo docker-compose up --force-recreate -d web
 
