--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,20 +44,20 @@ jobs:
           push: true
           tags: korsakovpv/yamdb_final:latest
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: push_to_docker_hub
-    steps:
-    - name: executing remote ssh commands to deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        script: |
-            cd yamdb_final
-            sudo docker-compose pull web
-            sudo docker-compose up --force-recreate -d web
+#  deploy:
+#    runs-on: ubuntu-latest
+#    needs: push_to_docker_hub
+#    steps:
+#    - name: executing remote ssh commands to deploy
+#      uses: appleboy/ssh-action@master
+#      with:
+#        host: ${{ secrets.HOST }}
+#        username: ${{ secrets.USER }}
+#        key: ${{ secrets.SSH_KEY }}
+#        script: |
+#            cd yamdb_final
+#            sudo docker-compose pull web
+#            sudo docker-compose up --force-recreate -d web
 
   send_message:
     runs-on: ubuntu-latest
@@ -68,4 +68,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно выполнен!
+        message: ${{ github.workflow }} успешно выполнен! Без деплоя, ip не указан.
