--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           push: true
           tags: korsakovpv/yamdb_final:latest
 
-#  deploy:
+  deploy:
 #    runs-on: ubuntu-latest
 #    needs: push_to_docker_hub
 #    steps:
